# chess-mcp-server

./: .gitignore  LICENSE  README.md  inspector.ps1  inspector.sh  pyproject.toml  release.ps1  release.sh  requirements.txt
.github/workflows/: publish.yml  test.yml
docs/: chess_logic.md  chess_render.md  mcp_reference_en.md  tool_implementation_guide.md
docs/analysis/: feasibility_report.md
docs/spec/: diagram.md  flow.md  tools.md
src/: chess_engine.py  game_state.py  mcp_server.py  rendering.py  web_dashboard.py
src/templates/: board.html  dashboard.html
tests/: test_chess_server.py  test_e2e.py  verify_rendering.py
