[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chess-mcp-server"
version = "0.1.2"
description = "A Model Context Protocol (MCP) server for playing Chess with AI Agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "fritzprix", email = "innocentevil0914@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]",
    "python-chess",
    "fastapi",
    "uvicorn",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/fritzprix/chess-mcp-server"
Issues = "https://github.com/fritzprix/chess-mcp-server/issues"

[project.scripts]
chess-mcp-server = "src.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
